Revert "fix horizon line overflow"
This reverts commit 40c2032e17d13ec9a52a9018392661c06b9fd17e.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,9 +1,7 @@
 html,
 body {
-    margin: 0;
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
 }
 
 body {
